# text-analysis-helpers

./: .coveragerc  .gitignore  .pre-commit-config.yaml  .travis.yml  MANIFEST.in  README.md  pyproject.toml  requirements.txt  run_coverage.sh  setup.py  tox.ini
.github/workflows/: main.yml
examples/: analyse_page.py  analyse_text.py  analyse_web_page.py  analysis_result_template.html
tests/: test_html.py  test_models.py  test_processors_text.py  test_text.py
tests/data/: page1.html  page_with_invalid_twitter_card.html  page_without_opengraph.html  page_without_twitter_card.html
tests/keywords/: corpora.py  test_rake.py
tests/named_entities/: test_nltk.py
tests/summaries/: test_sumy.py
text_analysis_helpers/: cli.py  downloaders.py  exceptions.py  helpers.py  html.py  models.py  text.py
text_analysis_helpers/keywords/: extractors.py  rake.py
text_analysis_helpers/named_entities/: extractors.py  nltk.py
text_analysis_helpers/processors/: html.py  text.py
text_analysis_helpers/summaries/: summarizers.py  sumy.py
text_analysis_helpers/templates/: html_analysis_result.html  text_analysis_result.html
