[tool.black]
line-length = 79
target-version = ['py310']

[tool.poetry]
name = "text-analysis-helpers"
version = "0.6.0"
description = "Collection of classes and functions for text analysis"
authors = ["Matigakis Panagiotis <pmatigakis@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pmatigakis/text-analysis-helpers"
repository = "https://github.com/pmatigakis/text-analysis-helpers"
keywords = ["text analysis"]
classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.10"
extruct = ">=0.13.0,<1.0.0"
textstat = ">=0.7.3,<1.0.0"
nltk = ">=3.3,<4.0"
numpy = ">=1.15.2,<2.0.0"
arrow = ">=0.15.5,<1.0.0"
requests = ">=2.26.0,<3.0.0"
article-extraction = ">=0.3.0,<0.4.0"
sumy = ">=0.11.0,<1.0.0"

[tool.poetry.dev-dependencies]
pre-commit = "2.19.0"
isort = "5.9.3"
black = "22.3.0"
flake8 = "4.0.1"
bandit = "1.7.1"
coverage = "7.2.2"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
text-analysis-helpers-cli = "text_analysis_helpers.cli:main"
