[tool.black]
line-length = 79
target-version = ['py310']

[tool.poetry]
name = "text-analysis-helpers"
version = "0.8.0"
description = "Collection of classes and functions for text analysis"
authors = ["Matigakis Panagiotis <pmatigakis@gmail.com>"]
license = "MIT"
readme = "README.md"
homepage = "https://github.com/pmatigakis/text-analysis-helpers"
repository = "https://github.com/pmatigakis/text-analysis-helpers"
keywords = ["text analysis"]
classifiers=[
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Natural Language :: English",
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]

[tool.poetry.dependencies]
python = "^3.10"
extruct = ">=0.17.0"
textstat = ">=0.7.4"
nltk = ">=3.8.1"
numpy = ">=1.26.4"
arrow = ">=1.3.0"
requests = ">=2.32.3"
article-extraction = ">=0.3.0,<0.4.0"
sumy = ">=0.11.0,<1.0.0"
langdetect = ">=1.0.9"

[tool.poetry.group.dev.dependencies]
pre-commit = "3.7.1"
isort = "5.13.2"
black = "24.4.2"
flake8 = "7.1.0"
bandit = "1.7.9"
coverage = "7.6.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
text-analysis-helpers-cli = "text_analysis_helpers.cli:main"
